@@ -13,12 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.springframework.osgi.iandt.serviceProxyFactoryBean;
 
 import java.util.Date;
 import java.util.Dictionary;
 import java.util.Enumeration;
 import java.util.Map;
+import java.util.Properties;
 
 import org.osgi.framework.ServiceRegistration;
 import org.springframework.aop.SpringProxy;
@@ -27,7 +29,6 @@ import org.springframework.osgi.service.importer.ImportedOsgiServiceProxy;
 import org.springframework.osgi.service.importer.support.Cardinality;
 import org.springframework.osgi.service.importer.support.OsgiServiceProxyFactoryBean;
 import org.springframework.osgi.util.BundleDelegatingClassLoader;
-import org.springframework.osgi.util.internal.MapBasedDictionary;
 
 /**
  * @author Costin Leau
@@ -36,6 +37,7 @@ import org.springframework.osgi.util.internal.MapBasedDictionary;
 public class ServiceRefAwareWithSingleServiceTest extends ServiceBaseTest {
 
 	private OsgiServiceProxyFactoryBean fb;
+
 
 	protected void onSetUp() throws Exception {
 		fb = new OsgiServiceProxyFactoryBean();
@@ -55,7 +57,7 @@ public class ServiceRefAwareWithSingleServiceTest extends ServiceBaseTest {
 	public void tstProxyForUnaryCardinality() throws Exception {
 		long time = 1234;
 		Date date = new Date(time);
-		Dictionary dict = new MapBasedDictionary();
+		Dictionary dict = new Properties();
 		ServiceRegistration reg = publishService(date);
 
 		fb = new OsgiServiceProxyFactoryBean();
@@ -105,7 +107,7 @@ public class ServiceRefAwareWithSingleServiceTest extends ServiceBaseTest {
 
 		long time = 1234;
 		Date date = new Date(time);
-		Dictionary dict = new MapBasedDictionary();
+		Dictionary dict = new Properties();
 		dict.put("foo", "bar");
 		dict.put("george", "michael");
 
